<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvoiceCreationFragment">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/ic_launcher_background"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_primaryContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtInvoiceCreationCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InvoiceCreationtxtCliente"
                android:textAlignment="center"
                android:textSize="@dimen/txtdInvoiceCreationCliente"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/nombre"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:hint="@string/tieInvoiceCreationNombre" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/icon_email"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"

                    android:hint="@string/tieInvoiceCreationEmail"
              />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/icon_phone"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"

                    android:hint="@string/tieÍnvoiceCreationTelefono"
                     />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:cardBackgroundColor="@color/ic_launcher_background"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_primaryContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtInvoiceCreationFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtInvoiceCreationFecha"
                android:textAlignment="center"
                android:textSize="@dimen/txtdInvoiceCreationCliente"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/icon_calendar"
                app:helperText="@string/tieFormatoFecha">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tieInvoicecreationFeEmision"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/icon_calendar"
                app:helperText="@string/tieFormatoFecha">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tieInvoiceCreationFeVencimiento"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/ic_launcher_background"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_primaryContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtInvoiceCreationArticulos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_variablefont_wdth_wght"
                android:text="@string/txtInvoiceCreationArticulos"
                android:textAlignment="center"
                android:textSize="@dimen/txtdInvoiceCreationCliente"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="60dp"
                android:fontFamily="@font/opensans_variablefont_wdth_wght"
                android:backgroundTint="@color/md_theme_light_primary"
                android:text="@string/btnInvoiceCreationArticulos" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvInvoiceArticulos"
                android:layout_width="match_parent"
                android:layout_height="135dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtInvoiceDetailsSubtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:layout_weight="1"
                    android:text="@string/txtInvoiceCreationSubTotal"

                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtInvoiceDetailslblImpuestos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:text="@string/tvInvoiceCreationImpuestos"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:text="111.000.000"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_primaryContainer"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtInvoiceDetailsTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:layout_weight="2"
                    android:text="@string/tvInvoiceCreation"
                    android:textAlignment="textEnd"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:layout_weight="2"
                    android:text="111.000.000"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>